<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/credentials">
		<EditTextPreference 
			android:key="ct_username" 
			android:title="@string/title_ct_username"
			android:summary="@string/summary_ct_username"
			android:dialogTitle="@string/diag_title_ct_username"
			/>

		<EditTextPreference 
			android:key="ct_password" 
			android:title="@string/title_ct_password"
			android:summary="@string/summary_ct_password"
			android:dialogTitle="@string/diag_title_ct_password"
			/>
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/general_options">
		
		<CheckBoxPreference 
			android:key="should_vibrate"
			android:title="@string/title_should_vibrate"
			android:summary="@string/summary_should_vibrate"
			/>
		
		<CheckBoxPreference 
			android:key="auto_get_captchas"
			android:title="@string/auto_get_captchas"
			android:summary="@string/summary_auto_get_captchas"
			/>	
		
	</PreferenceCategory>
    
</PreferenceScreen>
